--- a/index html.html
+++ b/index html.html
@@ -5,10 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css"
 </head>
 <body>
     <h1>Bem vindo à página da Semana Cultural </h1>
-    <h2>De 16 a 18 de novembro</h2>
+        <h2>De 16 a 18 de novembro</h2>
+    <h2>CE Papa João Paulo I</h2>
     <p>Teremos diversas oficinas!</p>
     <p>Em breve mais informações...</p>
     
